// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getFolders should be able to return the correct folders when method options are provided 1`] = `
Object {
  "actualFolder": "methodActual",
  "baselineFolder": "methodBase",
  "diffFolder": "methodDiff",
}
`;

exports[`utils getFolders should be able to return the correct folders when no method options are provided 1`] = `
Object {
  "actualFolder": "folderActual",
  "baselineFolder": "folderBase",
  "diffFolder": "folderDiff",
}
`;

exports[`utils getInstanceData should return correct instance data when JSONWP Mobile capabilities are provided 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "devicename",
  "logName": "logName",
  "name": "",
  "nativeWebScreenshot": true,
  "platformName": "platformname",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should return correct instance data when W3C Mobile capabilities are provided 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "appium:devicename",
  "logName": "logName",
  "name": "",
  "nativeWebScreenshot": true,
  "platformName": "platformname",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should return instance data when all capabilities are provided 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "devicename",
  "logName": "logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "platformname",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should return instance data when log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "",
  "logName": "logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should return instance data when the appium log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "",
  "logName": "appiumLogName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should return instance data when the minimum of capabilities is provided 1`] = `
Object {
  "browserName": "not-known",
  "browserVersion": "not-known",
  "deviceName": "",
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "not-known",
  "platformVersion": "not-known",
}
`;

exports[`utils getInstanceData should return instance data when the sauce log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "",
  "logName": "sauceLogName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should return instance data when wdio-ics option log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "",
  "logName": "wdio-ics-logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should return platformName based on the currentCapabilities.platform 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "",
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "browser.platform",
  "platformVersion": "12",
}
`;

exports[`utils getInstanceData should use the currentBrowser values when those are passed 1`] = `
Object {
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "devicename",
  "logName": "logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "platformname",
  "platformVersion": "12",
}
`;
